--- a/index.html
+++ b/index.html
@@ -2,149 +2,150 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Hash | Legendary Falcon</title>
+<title>Hash | Ultra Legendary Falcon</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 :root{
   --night:#020617;
-  --deep:#020617;
-  --skyA:#0b1220;
-  --skyB:#020617;
+  --sky1:#0b1220;
+  --sky2:#020617;
   --gold:#facc15;
   --text:#e5e7eb;
   --muted:#94a3b8;
 }
 
-/* RESET */
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:Inter,Arial,sans-serif;
-  color:var(--text);
   background:var(--night);
+  color:var(--text);
   overflow-x:hidden;
+  cursor:crosshair;
 }
 
-/* ===== LEGENDARY SKY ===== */
+/* 🌌 SKY */
 .sky{
   position:fixed;
   inset:0;
   z-index:-3;
-  background:linear-gradient(120deg,var(--skyA),var(--skyB),var(--skyA));
+  background:linear-gradient(120deg,var(--sky1),var(--sky2),var(--sky1));
   background-size:400% 400%;
-  animation:sky 25s ease infinite;
+  animation:skyMove 30s ease infinite;
 }
-@keyframes sky{
+@keyframes skyMove{
   0%{background-position:0% 50%}
   50%{background-position:100% 50%}
   100%{background-position:0% 50%}
 }
 
-/* CLOUD LAYERS */
+/* ☁️ CLOUDS */
 .clouds{
   position:fixed;
   inset:0;
   z-index:-2;
   background:
-    radial-gradient(circle at 20% 30%, rgba(255,255,255,.04), transparent 40%),
+    radial-gradient(circle at 30% 30%, rgba(255,255,255,.04), transparent 40%),
     radial-gradient(circle at 70% 40%, rgba(255,255,255,.03), transparent 45%),
     radial-gradient(circle at 40% 70%, rgba(255,255,255,.025), transparent 50%);
-  animation:clouds 60s linear infinite;
+  animation:cloudMove 80s linear infinite;
 }
-@keyframes clouds{
+@keyframes cloudMove{
   from{transform:translateX(0)}
-  to{transform:translateX(-200px)}
+  to{transform:translateX(-300px)}
 }
 
-/* HIGH ALTITUDE HAZE */
-.haze{
+/* ✨ GOLDEN AURA */
+.glow{
   position:fixed;
   inset:0;
   z-index:-1;
-  background:radial-gradient(circle at top, rgba(250,204,21,.05), transparent 60%);
+  background:radial-gradient(circle at center, rgba(250,204,21,.08), transparent 65%);
 }
 
-/* ===== CONTENT ===== */
+/* CONTENT */
 .container{
   max-width:900px;
   margin:auto;
-  padding:140px 20px;
+  padding:160px 20px;
 }
 
 .hero{
   border-left:3px solid var(--gold);
-  padding-left:32px;
+  padding-left:36px;
 }
 
 h1{
-  font-size:64px;
-  letter-spacing:3px;
+  font-size:72px;
+  letter-spacing:4px;
 }
 
 .tagline{
-  margin-top:14px;
+  margin-top:16px;
   font-size:18px;
   color:var(--muted);
-  max-width:640px;
+  max-width:650px;
 }
 
-/* FALCON MOTION */
-.falcon-mark{
-  width:80px;
+/* FALCON STRIKE LINE */
+.strike{
+  width:90px;
   height:2px;
   background:var(--gold);
-  margin-top:36px;
-  animation:glide 4s ease-in-out infinite;
-}
-@keyframes glide{
-  0%{transform:translateX(0)}
-  50%{transform:translateX(26px)}
-  100%{transform:translateX(0)}
+  margin-top:40px;
+  transition:transform .6s ease;
 }
 
+/* SECTIONS */
 .section{
-  margin-top:120px;
+  margin-top:160px;
+  opacity:0;
+  transform:translateY(40px);
+  transition:all 1s ease;
+}
+
+.section.visible{
+  opacity:1;
+  transform:translateY(0);
 }
 
 .section-title{
   font-size:12px;
-  letter-spacing:5px;
+  letter-spacing:6px;
   text-transform:uppercase;
   color:var(--gold);
-  margin-bottom:26px;
+  margin-bottom:28px;
 }
 
 .card{
-  border-top:1px solid rgba(250,204,21,.18);
-  padding:26px 0;
+  border-top:1px solid rgba(250,204,21,.2);
+  padding:28px 0;
 }
 
 .card p{
   color:var(--muted);
-  line-height:1.9;
-  max-width:740px;
+  line-height:2;
+  max-width:760px;
 }
 
 .quote{
-  font-size:24px;
+  font-size:26px;
   font-weight:300;
 }
 
 /* SKILLS */
 .skills span{
   display:inline-block;
-  margin:8px 20px 8px 0;
+  margin:10px 22px 10px 0;
   font-size:14px;
 }
 
 /* LINKS */
-a{
-  color:var(--gold);
-  text-decoration:none;
-}
+a{color:var(--gold);text-decoration:none}
 
 footer{
-  margin-top:160px;
+  margin-top:200px;
   font-size:14px;
   color:var(--muted);
 }
@@ -155,7 +156,7 @@ footer{
 
 <div class="sky"></div>
 <div class="clouds"></div>
-<div class="haze"></div>
+<div class="glow"></div>
 
 <div class="container">
 
@@ -163,64 +164,51 @@ footer{
   <div class="hero">
     <h1>HASH</h1>
     <p class="tagline">
-      Legendary Falcon Project Manager.  
-      I observe from altitude, decide with clarity,
-      and strike only when success is inevitable.
+      Ultra Legendary Falcon Project Manager.  
+      I operate above noise, move with intent,
+      and strike only when victory is certain.
     </p>
-    <div class="falcon-mark"></div>
+    <div class="strike" id="strike"></div>
   </div>
 
   <!-- MINDSET -->
   <div class="section">
-    <div class="section-title">Falcon Code</div>
+    <div class="section-title">Falcon Doctrine</div>
     <div class="card">
       <p class="quote">
-        Vision above noise.  
-        Patience above pressure.  
-        Control above chaos.
+        Silence is strategy.  
+        Altitude is advantage.  
+        Timing is everything.
       </p>
     </div>
   </div>
 
-  <!-- ROLE -->
+  <!-- COMMAND -->
   <div class="section">
     <div class="section-title">Command</div>
     <div class="card">
       <p>
         I lead teams through uncertainty,
-        manage risk without panic,
-        and deliver outcomes with total ownership.
+        control risk without emotion,
+        and deliver results without excuses.
       </p>
     </div>
   </div>
 
-  <!-- SKILLS -->
+  <!-- CAPABILITIES -->
   <div class="section">
     <div class="section-title">Capabilities</div>
     <div class="card skills">
       <span>Project Leadership</span>
       <span>Agile / Scrum</span>
-      <span>Strategic Planning</span>
-      <span>Risk Governance</span>
-      <span>Stakeholder Control</span>
+      <span>Strategic Vision</span>
+      <span>Risk Control</span>
+      <span>Stakeholder Authority</span>
       <span>Jira · Notion</span>
     </div>
   </div>
 
-  <!-- MISSIONS -->
-  <div class="section">
-    <div class="section-title">Missions</div>
-    <div class="card">
-      <p><strong>Enterprise Platform</strong><br>
-      −30% delivery time through precision execution.</p>
-    </div>
-    <div class="card">
-      <p><strong>Mobile Product</strong><br>
-      Full lifecycle command using Scrum.</p>
-    </div>
-  </div>
-
-  <!-- CONTACT -->
+  <!-- SIGNAL -->
   <div class="section">
     <div class="section-title">Signal</div>
     <div class="card">
@@ -233,9 +221,28 @@ footer{
   </div>
 
   <footer>
-    © 2025 Hash — Legendary Falcon.
+    © 2025 Hash — Apex Predator.
   </footer>
 
 </div>
+
+<script>
+/* 🦅 SCROLL STRIKE EFFECT */
+const sections = document.querySelectorAll('.section');
+const strike = document.getElementById('strike');
+
+window.addEventListener('scroll', () => {
+  const trigger = window.innerHeight * 0.85;
+
+  sections.forEach(sec => {
+    if(sec.getBoundingClientRect().top < trigger){
+      sec.classList.add('visible');
+    }
+  });
+
+  strike.style.transform = `translateX(${window.scrollY / 10}px)`;
+});
+</script>
+
 </body>
 </html>
